--- a/index.html
+++ b/index.html
@@ -15,83 +15,84 @@
     </div>
 
     <div class="calc">
-        <h2>Selecione os Valores x, y, z</h2>
+        <h2 style="color: yellow">By: Teixeira</h1>
+            <h2>Selecione os Valores x, y, z</h2>
 
-        <h2>X</h2>
-        <div class="variable" id="x-variables">
-            <div class="image-option" onclick="selectVariable('x', 0)">
-                <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
-            </div>
-            <div class="image-option" onclick="selectVariable('x', 10)">
-                <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
-            </div>
-            <div class="image-option" onclick="selectVariable('x', 11)">
-                <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
-            </div>
-            <div class="image-option" onclick="selectVariable('x', 20)">
-                <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
-            </div>
+            <h2>X</h2>
+            <div class="variable" id="x-variables">
+                <div class="image-option" onclick="selectVariable('x', 0)">
+                    <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
+                </div>
+                <div class="image-option" onclick="selectVariable('x', 10)">
+                    <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
+                </div>
+                <div class="image-option" onclick="selectVariable('x', 11)">
+                    <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
+                </div>
+                <div class="image-option" onclick="selectVariable('x', 20)">
+                    <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
+                </div>
 
-            <div class="image-option" onclick="selectVariable('x', 21)">
-                <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
-            </div>
-            <div class="image-option" onclick="selectVariable('x', 22)">
-                <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
-            </div>
-        </div>
-
-        <h2>Y</h2>
-        <div class="variable" id="y-variables">
-            <div class="image-option" onclick="selectVariable('y', 0)">
-                <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
-            </div>
-            <div class="image-option" onclick="selectVariable('y', 10)">
-                <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
-            </div>
-            <div class="image-option" onclick="selectVariable('y', 11)">
-                <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
-            </div>
-            <div class="image-option" onclick="selectVariable('y', 20)">
-                <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
+                <div class="image-option" onclick="selectVariable('x', 21)">
+                    <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
+                </div>
+                <div class="image-option" onclick="selectVariable('x', 22)">
+                    <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
+                </div>
             </div>
 
-            <div class="image-option" onclick="selectVariable('y', 21)">
-                <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
-            </div>
-            <div class="image-option" onclick="selectVariable('y', 22)">
-                <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
-            </div>
-        </div>
+            <h2>Y</h2>
+            <div class="variable" id="y-variables">
+                <div class="image-option" onclick="selectVariable('y', 0)">
+                    <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
+                </div>
+                <div class="image-option" onclick="selectVariable('y', 10)">
+                    <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
+                </div>
+                <div class="image-option" onclick="selectVariable('y', 11)">
+                    <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
+                </div>
+                <div class="image-option" onclick="selectVariable('y', 20)">
+                    <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
+                </div>
 
-        <h2>Z</h2>
-        <div class="variable" id="z-variables">
-            <div class="image-option" onclick="selectVariable('z', 0)">
-                <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
-            </div>
-            <div class="image-option" onclick="selectVariable('z', 10)">
-                <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
-            </div>
-            <div class="image-option" onclick="selectVariable('z', 11)">
-                <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
-            </div>
-            <div class="image-option" onclick="selectVariable('z', 20)">
-                <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
+                <div class="image-option" onclick="selectVariable('y', 21)">
+                    <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
+                </div>
+                <div class="image-option" onclick="selectVariable('y', 22)">
+                    <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
+                </div>
             </div>
 
-            <div class="image-option" onclick="selectVariable('z', 21)">
-                <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
-            </div>
-            <div class="image-option" onclick="selectVariable('z', 22)">
-                <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
-            </div>
-        </div>
+            <h2>Z</h2>
+            <div class="variable" id="z-variables">
+                <div class="image-option" onclick="selectVariable('z', 0)">
+                    <img src="https://i.ibb.co/5rDRw30/symbols-01.jpg" alt="Value 0">
+                </div>
+                <div class="image-option" onclick="selectVariable('z', 10)">
+                    <img src="https://i.ibb.co/PFmbJ00/symbols-02.jpg" alt="Value 10">
+                </div>
+                <div class="image-option" onclick="selectVariable('z', 11)">
+                    <img src="https://i.ibb.co/FqXw4mG/symbols-03.jpg" alt="Value 11">
+                </div>
+                <div class="image-option" onclick="selectVariable('z', 20)">
+                    <img src="https://i.ibb.co/TrNY7Qf/symbols-04.jpg" alt="Value 20">
+                </div>
 
-        <div id="results">
-            <h3>Resultado:</h3>
-            <p id="result1">1° Numero: </p>
-            <p id="result2">2° Numero: </p>
-            <p id="result3">3° Numero: </p>
-        </div>
+                <div class="image-option" onclick="selectVariable('z', 21)">
+                    <img src="https://i.ibb.co/jfYKRth/symbols-05.jpg" alt="Value 21">
+                </div>
+                <div class="image-option" onclick="selectVariable('z', 22)">
+                    <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
+                </div>
+            </div>
+
+            <div id="results">
+                <h3>Resultado:</h3>
+                <p id="result1">1° Numero: </p>
+                <p id="result2">2° Numero: </p>
+                <p id="result3">3° Numero: </p>
+            </div>
     </div>
     <script src="./assets/js/calc.js"></script>
 </body>
