--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </div>
 
     <div class="calc">
-        <h2 style="color: yellow">By: Teixeira</h1>
-            <h2>Selecione os Valores x, y, z</h2>
+        <h1>Selecione os Valores x, y, z</h2>
+
+            <hr>
 
             <h2>X</h2>
             <div class="variable" id="x-variables">
@@ -41,6 +42,8 @@
                 </div>
             </div>
 
+            <hr>
+
             <h2>Y</h2>
             <div class="variable" id="y-variables">
                 <div class="image-option" onclick="selectVariable('y', 0)">
@@ -63,6 +66,8 @@
                     <img src="https://i.ibb.co/bXGth05/symbols-06.jpg" alt="Value 22">
                 </div>
             </div>
+
+            <hr>
 
             <h2>Z</h2>
             <div class="variable" id="z-variables">
@@ -87,12 +92,19 @@
                 </div>
             </div>
 
+            <hr>
+
             <div id="results">
                 <h3>Resultado:</h3>
                 <p id="result1">1° Numero: </p>
                 <p id="result2">2° Numero: </p>
                 <p id="result3">3° Numero: </p>
             </div>
+
+            <hr>
+
+            <h2 class="by">By: Teixeira
+        </h1>
     </div>
     <script src="./assets/js/calc.js"></script>
 </body>
